# new-fibs-py

./: README.md  meson.build  pyproject.toml
.github/workflows/: compile.yaml  pack.yaml  publish.yaml
FIBOS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fibos/: __init__.py  cleaner.py  main_intermediary.py  manage_os.py  respak.py  set_parameters.py  utils.py
fibos/fortran/: ds75.f
